--- a/afs/templates/views/components/workflows/select-phys-thing-step.htm
+++ b/afs/templates/views/components/workflows/select-phys-thing-step.htm
@@ -18,7 +18,7 @@
     <div style="padding: 5px; margin-top: 15px;">
         <div class="widget-input-label">
             <span data-bind="if: datasetRoute == 'non-destructive'">
-                Choose an Object that has an Area of interest
+                Select an Object that has an Area of interest
             </span>
             <span data-bind="if: datasetRoute == 'destructive'">
                 Select a Sample of interest
