--- a/afs/templates/views/components/reports/physical-thing.htm
+++ b/afs/templates/views/components/reports/physical-thing.htm
@@ -221,6 +221,33 @@
             </div>
         </div>
         <!-- Image -->
+        <div class="afs-report-section">
+            <h2 class="afs-report-section-title"><i data-bind="click: function() {toggleVisibility(visible.thumbnail)}, css: {'fa-angle-double-right': visible.thumbnail(), 'fa-angle-double-up': !visible.thumbnail()}" class="fa toggle"></i> {% trans "Image of Physical Thing" %}</h2>
+
+            <!-- Collapsible content -->
+            <div data-bind="visible: visible.thumbnail" class="afs-report-collapsible-container pad-lft">
+                
+                <!-- ko ifnot: imageSummary() -->
+                <div class="afs-nodata-note">No images for this resource</div>
+                <!-- /ko -->
+
+                <!-- ko if: imageSummary() -->
+                <div class="afs-image-service-list-item" data-bind="foreach: imageSummary">
+                    <label 
+                        data-bind="
+                            text: displayname,
+                        "
+                    ></label>
+                    <span class="iiif-gallery-canvas-thumbnail">
+                        <img data-bind="attr: { src: thumbnail }">
+                    </span>
+                    <span data-bind="text: console.log(thumbnail)"></span>
+                </div>
+                <!-- /ko -->
+
+                
+            </div>
+        </div>
         <!-- Statements -->
         <div class="afs-report-section">
             <h2 class="afs-report-section-title"><i data-bind="click: function() {toggleVisibility(visible.statements)}, css: {'fa-angle-double-right': visible.statements(), 'fa-angle-double-up': !visible.statements()}" class="fa toggle"></i> {% trans "Statements" %}</h2>
