add delete method for analysis areas, re #993

--- a/afs/templates/views/components/workflows/analysis-areas-workflow/analysis-areas-annotation-step.htm
+++ b/afs/templates/views/components/workflows/analysis-areas-workflow/analysis-areas-annotation-step.htm
@@ -124,11 +124,16 @@
                                                 },
                                             "
                                         >
-                                            <td style="cursor: pointer;" class="map-card-feature-tool">
+                                            <td style="cursor: pointer; width: 30px;">
                                                 <a href="javascript:void(0);"
                                                     data-bind="click: function() { $parent.selectAnalysisAreaInstance($data); }, clickBubble: false">
                                                     <i class="fa fa-pencil map-card-feature-edit"></i>
-                                                    {% trans "Edit" %}
+                                                </a>
+                                            </td>
+                                            <td style="cursor: pointer; width: 30px;">
+                                                <a href="javascript:void(0);"
+                                                    data-bind="click: function() { $parent.deleteAnalysisAreaInstance($data); }, clickBubble: false">
+                                                    <i class="fa fa-trash map-card-feature-edit"></i>
                                                 </a>
                                             </td>
                                             <td class="afs-workflow-table-contents"
