--- a/afs/templates/views/components/reports/physical-thing.htm
+++ b/afs/templates/views/components/reports/physical-thing.htm
@@ -331,7 +331,7 @@
         <div data-bind="component: {
             name: 'views/components/reports/scenes/default',
             params: {
-                data: aboutnessData
+                data: actorData,
             }
         }"></div>
         <!-- Dimensions -->
