--- a/afs/templates/views/components/reports/instrument.htm
+++ b/afs/templates/views/components/reports/instrument.htm
@@ -168,48 +168,56 @@
     <div class="afs-report-page">
         <!-- Name -->
         <div class="afs-report-section">
-            <h2 class="afs-report-section-title"><i data-bind="click: function() {toggleVisibility(visible.names)}, css: {'fa-angle-double-right': visible.names(), 'fa-angle-double-up': !visible.names()}" class="fa toggle"></i> {% trans "Names" %}</h2>
+            <!-- ko ifnot: nameSummary() && nameSummary().length -->
+            <div class="afs-nodata-note">No names for this resource</div>
+            <!-- /ko -->
 
-            <!-- Collapsible content -->
-            <div data-bind="visible: visible.names" class="afs-report-collapsible-container pad-lft">
-
-                <!-- ko ifnot: namesSearchData().length -->
-                <div class="afs-nodata-note">No names for this resource</div>
-                <!-- /ko -->
-
-                <!-- ko if: namesSearchData().length -->
-                <div class="afs-report-subsection" >
-                    <div>
-                        <div class="afs-table pad-btm">
-                            <table class="table table-striped" cellspacing="0" width="100%">
-                                <thead>
-                                    <tr class="afs-table-header">
-                                        <th>{% trans "Name" %}</th>
-                                        <th class="min-tabletl">{% trans "Type" %}</th>
-                                        <th class="none">{% trans "Language" %}</th>
-                                    </tr>
-                                </thead>
-                                <tbody data-bind="dataTablesForEach: { data: namesSearchData, dataTableOptions: nameTableConfig }">
-                                    <tr>
-                                        <td data-bind="text: content"></td>
-                                        <td data-bind="text: type"></td>
-                                        <td data-bind="text: language"></td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
+            <!-- ko if: nameSummary() && nameSummary().length -->
+            <div class="afs-report-subsection">
+                <div class="afs-table pad-btm">
+                    <table class="table table-striped" cellspacing="0" width="100%">
+                        <thead>
+                            <tr class="afs-table-header">
+                                <th>{% trans "Name" %}</th>
+                                <th>{% trans "Name Type" %}</th>
+                            </tr>
+                        </thead>
+                        <tbody data-bind="dataTablesForEach: { data: nameSummary, dataTableOptions: $data.getTableConfig(2) }">
+                            <tr>
+                                <td data-bind="text: content"></td>
+                                <td data-bind="text: type"></td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
-                <!-- /ko -->
             </div>
+            <!-- /ko -->
         </div>
         <!-- Type of Instrument -->
-        <div data-bind="component: {
-            name: 'views/components/reports/scenes/default',
-            params: {
-                data: typeSearchData,
-            }
-        }"></div>
+        <div class="afs-report-section">
+            <!-- ko ifnot: typeSummary() && typeSummary().length -->
+            <div class="afs-nodata-note">No names for this resource</div>
+            <!-- /ko -->
+
+            <!-- ko if: typeSummary() && typeSummary().length -->
+            <div class="afs-report-subsection">
+                <div class="afs-table pad-btm">
+                    <table class="table table-striped" cellspacing="0" width="100%">
+                        <thead>
+                            <tr class="afs-table-header">
+                                <th>{% trans "Instrument Type" %}</th>
+                            </tr>
+                        </thead>
+                        <tbody data-bind="dataTablesForEach: { data: typeSummary, dataTableOptions: $data.getTableConfig(1) }">
+                            <tr>
+                                <td data-bind="text: type"></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+            <!-- /ko -->
+        </div>
     </div>
 </div>
 
