--- a/afs/templates/views/components/reports/project.htm
+++ b/afs/templates/views/components/reports/project.htm
@@ -96,7 +96,7 @@
                                                 <th class="afs-table-control all"></th>
                                             </tr>
                                         </thead>
-                                        <tbody data-bind="dataTablesForEach: { data: collectionOfChildProjects, dataTableOptions: threeWideTableConfig }">
+                                        <tbody data-bind="dataTablesForEach: { data: collectionOfChildProjects, dataTableOptions: getTableConfig(3) }">
                                             <tr>
                                                 <td data-bind="text: displayname"></td>
                                                 <td data-bind="text: displaydescription" class="display-description"></td>
@@ -159,150 +159,216 @@
 
         <!-- Names -->
         <div class="afs-report-section">
-            <h2 class="afs-report-section-title"><i data-bind="click: function() {toggleVisibility(visible.names)}, css: {'fa-angle-double-right': visible.names(), 'fa-angle-double-up': !visible.names()}" class="fa toggle"></i> {% trans "Names" %}</h2>
-        
-            <!-- Collapsible content -->
-            <div data-bind="visible: visible.names" class="afs-report-collapsible-container pad-lft">
-        
-                <!-- ko ifnot: namesSearchData().length -->
+            <div class="afs-report-subsection">
+                <!-- ko ifnot: nameSummary() && nameSummary().length -->
                 <div class="afs-nodata-note">No names for this resource</div>
                 <!-- /ko -->
-                
-                <!-- ko if: namesSearchData().length -->
-                <div class="afs-report-subsection" >
-                    <div>
-                        <div class="afs-table pad-btm">
-                            <table class="table table-striped" cellspacing="0" width="100%">
-                                <thead>
-                                    <tr class="afs-table-header">
-                                        <th>{% trans "Name" %}</th>
-                                        <th class="min-tabletl">{% trans "Type" %}</th>
-                                        <th class="none">{% trans "Language" %}</th>
-                                    </tr>
-                                </thead>
-                                <tbody data-bind="dataTablesForEach: { data: namesSearchData, dataTableOptions: threeWideTableConfig }">
-                                    <tr>
-                                        <td data-bind="text: content"></td>
-                                        <td data-bind="text: type"></td>
-                                        <td data-bind="text: language"></td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
+
+                <!-- ko if: nameSummary() && nameSummary().length -->
+                <div class="afs-table pad-btm">
+                    <table class="table table-striped" cellspacing="0" width="100%">
+                        <thead>
+                            <tr class="afs-table-header">
+                                <th>{% trans "Name" %}</th>
+                                <th>{% trans "Name Type" %}</th>
+                            </tr>
+                        </thead>
+                        <tbody data-bind="dataTablesForEach: { data: nameSummary, dataTableOptions: getTableConfig(2) }">
+                            <tr>
+                                <td data-bind="text: content"></td>
+                                <td data-bind="text: type"></td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
                 <!-- /ko -->
             </div>
         </div>
         <!-- Dates -->
-        <div data-bind="component: {
-            name: 'views/components/reports/scenes/substance',
-            params: {
-                data: resource,
-                dataConfig: substanceDataConfig
-            }
-        }"></div>
+        <div class="afs-report-section">
+            <div class="afs-report-subsection">
+                <!-- ko ifnot: datesSummary() && datesSummary().length -->
+                <div class="afs-nodata-note">No timespan for this resource</div>
+                <!-- /ko -->
+
+                <!-- ko if: datesSummary() && datesSummary().length -->
+                <div class="afs-table pad-btm">
+                    <table class="table table-striped" cellspacing="0" width="100%">
+                        <thead>
+                            <tr lass="afs-table-header">
+                                <th>{% trans "Beginning of the beginning" %}</th>
+                                <th>{% trans "End of the beginning" %}</th>
+                                <th>{% trans "Beginning of the end" %}</th>
+                                <th>{% trans "End of the end" %}</th>
+                            </tr>
+                        </thead>
+                        <tbody data-bind="dataTablesForEach: { data: datesSummary, dataTableOptions: getTableConfig(4) }">
+                            <tr>
+                                <td data-bind="text: beginning_of_beginning"></td>
+                                <td data-bind="text: end_of_beginning"></td>
+                                <td data-bind="text: beginning_of_end"></td>
+                                <td data-bind="text: end_of_end"></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <!-- /ko -->
+            </div>
+        </div>
         <!-- Activity Type -->
-        <div data-bind="component: {
-            name: 'views/components/reports/scenes/default',
-            params: {
-                data: activityTypeSearchData,
-            }
-        }"></div>
+        <div class="afs-report-section">
+            <div class="afs-report-subsection">
+                <!-- ko ifnot: activityTypeSummary() && activityTypeSummary().length -->
+                <div class="afs-nodata-note">No activity type for this resource</div>
+                <!-- /ko -->
+
+                <!-- ko if: activityTypeSummary() && activityTypeSummary().length -->
+                <div class="afs-table pad-btm">
+                    <table class="table table-striped" cellspacing="0" width="100%">
+                        <thead>
+                            <tr class="afs-table-header">
+                                <th>{% trans "Activity Type" %}</th>
+                            </tr>
+                        </thead>
+                        <tbody data-bind="dataTablesForEach: { data: activityTypeSummary, dataTableOptions: $data.getTableConfig(1) }">
+                            <tr>
+                                <td data-bind="text: displayValue"></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <!-- /ko -->
+            </div>
+        </div>
         <!-- Parent Project -->
-        <div data-bind="component: {
-            name: 'views/components/reports/scenes/default',
-            params: {
-                data: parthoodData,
-            }
-        }"></div>
+        <div class="afs-report-section">
+            <div class="afs-report-subsection">
+                <!-- ko ifnot: parentProjectSummary() && parentProjectSummary().length -->
+                <div class="afs-nodata-note">No parent project for this resource</div>
+                <!-- /ko -->
+
+                <!-- ko if: parentProjectSummary() && parentProjectSummary().length -->
+                <div class="afs-table pad-btm">
+                    <table class="table table-striped" cellspacing="0" width="100%">
+                        <thead>
+                            <tr class="afs-table-header">
+                                <th>{% trans "Parent Project" %}</th>
+                            </tr>
+                        </thead>
+                        <tbody data-bind="dataTablesForEach: { data: parentProjectSummary, dataTableOptions: $data.getTableConfig(1) }">
+                            <tr>
+                                <td><a class="afs-table-link" data-bind="click: function() {window.open(link);}, text: displayValue" href="javascript:void(0)"></a></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <!-- /ko -->
+            </div>
+        </div>
         <!-- Project Team -->
-        <div data-bind="component: {
-            name: 'views/components/reports/scenes/default',
-            params: {
-                data: teamSearchData,
-            }
-        }"></div>
+        <div class="afs-report-section">
+            <div class="afs-report-subsection">
+                <!-- ko ifnot: teamSummary() && teamSummary().length -->
+                <div class="afs-nodata-note">No project team for this resource</div>
+                <!-- /ko -->
+
+                <!-- ko if: teamSummary() && teamSummary().length -->
+                <div class="afs-table pad-btm">
+                    <table class="table table-striped" cellspacing="0" width="100%">
+                        <thead>
+                            <tr class="afs-table-header">
+                                <th>{% trans "Project Team" %}</th>
+                            </tr>
+                        </thead>
+                        <tbody data-bind="dataTablesForEach: { data: teamSummary, dataTableOptions: $data.getTableConfig(1) }">
+                            <tr>
+                                <td><a class="afs-table-link" data-bind="click: function() {window.open(link);}, text: displayValue" href="javascript:void(0)"></a></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <!-- /ko -->
+            </div>
+        </div>
         <!-- Statements -->
         <div class="afs-report-section">
-            <h2 class="afs-report-section-title"><i data-bind="click: function() {toggleVisibility(visible.statements)}, css: {'fa-angle-double-right': visible.statements(), 'fa-angle-double-up': !visible.statements()}" class="fa toggle"></i> {% trans "Statements" %}</h2>
-        
-            <!-- Collapsible content -->
-            <div data-bind="visible: visible.statements" class="afs-report-collapsible-container pad-lft">
-        
-                <!-- ko ifnot: statementsSearchData().length -->
+            <div class="afs-report-subsection">
+                <!-- ko ifnot: statementsSummary() && statementsSummary().length -->
                 <div class="afs-nodata-note">No statements for this resource</div>
                 <!-- /ko -->
-                
-                <!-- ko if: statementsSearchData().length -->
-                <div class="afs-report-subsection" >
-                    <div class="firstchild-container">
-                        <div class="afs-table pad-btm">
-                            <table class="table table-striped" cellspacing="0" width="100%">
-                                <thead>
-                                    <tr class="afs-table-header">
-                                        <th>{% trans "Content" %}</th>
-                                        <th class="none">{% trans "Type" %}</th>
-                                        <th class="none">{% trans "Language" %}</th>
-                                    </tr>
-                                </thead>
-                                <tbody data-bind="dataTablesForEach: { data: statementsSearchData, dataTableOptions: threeWideTableConfig }">
-                                    <tr>
-                                        <td id="project-search-statement-content" data-bind="text: content"></td>
-                                        <td data-bind="text: type"></td>
-                                        <td data-bind="text: language"></td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
+
+                <!-- ko if: statementsSummary() && statementsSummary().length -->
+                <div class="afs-table pad-btm">
+                    <table class="table table-striped" cellspacing="0" width="100%">
+                        <thead>
+                            <tr class="afs-table-header">
+                                <th>{% trans "Statements" %}</th>
+                                <th>{% trans "Type" %}</th>
+                            </tr>
+                        </thead>
+                        <tbody data-bind="dataTablesForEach: { data: statementsSummary, dataTableOptions: getTableConfig(2) }">
+                            <tr>
+                                <td id="project-search-statement-content" data-bind="text: content"></td>
+                                <td data-bind="text: type"></td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
                 <!-- /ko -->
             </div>
         </div>
         <!-- Identifier -->
         <div class="afs-report-section">
-            <h2 class="afs-report-section-title"><i data-bind="click: function() {toggleVisibility(visible.identifiers)}, css: {'fa-angle-double-right': visible.identifiers(), 'fa-angle-double-up': !visible.identifiers()}" class="fa toggle"></i> {% trans "Identifiers" %}</h2>
-        
-            <!-- Collapsible content -->
-            <div data-bind="visible: visible.identifiers" class="afs-report-collapsible-container pad-lft">
-        
-                <!-- ko ifnot: identiferSearchData() -->
+            <div class="afs-report-subsection">
+                <!-- ko ifnot: identifierSummary() && identifierSummary().length -->
                 <div class="afs-nodata-note">No identifiers for this resource</div>
                 <!-- /ko -->
-        
-                <!-- ko if: identiferSearchData() -->
-                
-                <div class="afs-report-subsection" >
-                    <div>
-                        <div class="afs-table">
-                            <table class="table table-striped" cellspacing="0" width="100%">
-                                <thead>
-                                    <tr class="afs-table-header">
-                                        <th>{% trans "Name" %}</th>
-                                        <th class="min-tabletl">{% trans "Type" %}</th>
-                                    </tr>
-                                </thead>
-                                <tbody data-bind="dataTablesForEach: { data: identiferSearchData, dataTableOptions: identifierTableConfig }">
-                                    <tr>
-                                        <td data-bind="text: content"></td>
-                                        <td data-bind="text: type"></td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
+
+                <!-- ko if: identifierSummary() && identifierSummary().length -->
+                <div class="afs-table">
+                    <table class="table table-striped" cellspacing="0" width="100%">
+                        <thead>
+                            <tr class="afs-table-header">
+                                <th>{% trans "Identifier" %}</th>
+                                <th>{% trans "Type" %}</th>
+                            </tr>
+                        </thead>
+                        <tbody data-bind="dataTablesForEach: { data: identifierSummary, dataTableOptions: getTableConfig(2) }">
+                            <tr>
+                                <td data-bind="text: content"></td>
+                                <td data-bind="text: type"></td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
                 <!-- /ko -->
             </div>
         </div>
-         <!-- Type -->
-         <div data-bind="component: {
-            name: 'views/components/reports/scenes/default',
-            params: {
-                data: typeSearchData,
-            }
-        }"></div>
+        <!-- Type -->
+        <div class="afs-report-section">
+            <div class="afs-report-subsection">
+                <!-- ko ifnot: typeSummary() && typeSummary().length -->
+                <div class="afs-nodata-note">No type for this resource</div>
+                <!-- /ko -->
+
+                <!-- ko if: typeSummary() && typeSummary().length -->
+                <div class="afs-table pad-btm">
+                    <table class="table table-striped" cellspacing="0" width="100%">
+                        <thead>
+                            <tr class="afs-table-header">
+                                <th>{% trans "Project Type" %}</th>
+                            </tr>
+                        </thead>
+                        <tbody data-bind="dataTablesForEach: { data: typeSummary, dataTableOptions: $data.getTableConfig(1) }">
+                            <tr>
+                                <td data-bind="text: type"></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <!-- /ko -->
+            </div>
+        </div>
     </div>
 </div>
 
