--- a/afs/templates/views/components/reports/instrument.htm
+++ b/afs/templates/views/components/reports/instrument.htm
@@ -196,7 +196,7 @@
         <!-- Type of Instrument -->
         <div class="afs-report-section">
             <!-- ko ifnot: typeSummary() && typeSummary().length -->
-            <div class="afs-nodata-note">No names for this resource</div>
+            <div class="afs-nodata-note">No type for this resource</div>
             <!-- /ko -->
 
             <!-- ko if: typeSummary() && typeSummary().length -->
